# ir_bits_and_pieces

./: README.md
croker/: README.md  pyproject.toml
croker/croker/: __init__.py  __main__.py
croker/prompts/: custom_judge_prompt.md  custom_query_prompt.md
